# pfp

./: Cargo.toml
.cargo/: config.toml
src/: action.rs  actions.rs  cache.rs  discord.rs  frames.rs  main.rs
src/actions/: aliases.rs  animate.rs  column.rs  combine.rs  copy.rs  delay.rs  discordpfp.rs  fade.rs  grayscale.rs  mirror.rs  opacity.rs  pad.rs  reverse.rs  rotate.rs  row.rs  scale.rs  squish.rs  tenor.rs  text.rs  times.rs  url.rs
